kube-prometheus/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_iventure-kube-prometheus-s-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: kube-prometheus-stack-admission
    app.kubernetes.io/instance: iventure
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 51.0.2
    chart: kube-prometheus-stack-51.0.2
    heritage: Helm
    release: iventure
  name: iventure-kube-prometheus-s-admission
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: iventure-kube-prometheus-s-operator
      namespace: monitoring
      path: /admission-prometheusrules/validate
  failurePolicy: Ignore
  name: prometheusrulemutate.monitoring.coreos.com
  rules:
  - apiGroups:
    - monitoring.coreos.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - prometheusrules
  sideEffects: None
  timeoutSeconds: 10
